--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Path": "D:\\Study\\FileShare\\bin\\Debug\\net8.0\\files"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=FileShare;Username=postgres;Password=admin"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=FileShare;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
