--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "FileStorageSettings": {
-    "Path": "D:\\Study\\FileShare\\bin\\Debug\\net8.0\\files"
+    "Path": "C:\\FileShareStorage"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=FileShare;Username=postgres;Password=postgres"
