Add shortLink modal form

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,10 @@
 {
-  "FileStorageSettings": {
-    "Path": "D:\\Study\\FileShare\\bin\\Debug\\net8.0\\files"
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=FileShare;Username=postgres;Password=admin"
-  },
+    "FileStorageSettings": {
+        "Path": "C:\\Users\\evg\\source\\repos\\timi09\\FileShare\\bin\\Debug\\net8.0\\files"
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=FileShare;Username=postgres;Password=postgres"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
